2025-02-28
-- Fixed error: Webservice could not be started, because Conversation handles were not created when restoring saved Webservice definitions.
2025-02-25
-- Services of type "2" (Web service) will now also be deleted from the table inresponse.services
2025-02-03
- Added option to define path for target data files and transaction log files.
2024-10-10
- Changes when modifying email addresses:
	- The "from" field will not be modified any longer
	- When using the parameter @ReplaceAllEmailAddressesBy, the "CC" and "BCC" addresses are set to NULL instead of the address
	  provided with the parameter.
- Changes of email related parameters in the template config file:
	- @ReplaceAllEmailAddressesBy is now set to an example address.
	- @EmailAddressDomainPrefix is now empty by default
	- The setting "SMTPHost" will not be modified by default.
2024-09-09
- "New Installation scripts" are now included in the package, no need any more to extract them from the Insight Core package manually..
2024-09-06
- If tables from the parameter $TruncateTableList have referencing tables, the table will be emptied by DELETEs in batches of 100000 rows instead of TRUNCATE.
- The database transaction Log will be shrinked on the Target database at the end of the process.
2024-06-18
- Added option to skip the check for existing backup folder and files. This is useful if the backup folder is not accessible by the user account who is running the script.
- Use cmdlet Backup-Sqldatabase instead of SMO object directly.
2024-05-07
- Increased Batchsize for PurgeSystemMaster from 10000 to 100000 for better performance
2024-04-02
- Added option to delete all transactional data from target database.
	Either the standard SP "dbo.spDBA_utlCleanupTransactionalData" or a given custom SP is used for this.
2024-03-22
- Tables with CNC program paths are now also updated according to the "ReplacePaths" parameter:
	- dbo.OrderItemCNCPrograms
	- dbo.OrderItemCNCProgramAttachments
	- dbo.ItemCNCPrograms