@@ -76,6 +76,10 @@
 # Example:
 #$InresponseUsersToDelete="(N'DOMAIN\inresponse1'),(N'DOMAIN\inresponse2')"
 
+# Database users to Delete in Target database. This can be Domain users or groups or SQL Logins (comma-separated list)
+[string]$DBUsersToDelete	= ""	# e.g.  "MYDOMAIN\InsightUsersProd,MYDOMAIN\InresponseProd"
+
+
 # Disable all Inresponse Monitors:
 [boolean]$DisableAllMonitors = $true
 
